--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,8 @@
         <div class="menu">
         <nav>
           <a href="{{ "/" | absolute_url }}">Overview</a> |
-          <a href="text-manipulation">Timing and Profiling</a> |
-          <a href="regex">Writing Efficient R Code</a> 
+          <a href="timing">Timing and Profiling</a> |
+          <a href="efficiency">Writing Efficient R Code</a> 
         </nav>
         </div>
         <div class="main">
